# Glyph-based-Chinese-Character-Embedding

./: README.md
radical_parser/: README.md  pyproject.toml
radical_parser/cjkradlib/: __init__.py  __main__.py  _decompose.py  core.py  decompose.py  frequency.py  variant.py
radical_parser/cjkradlib/data/jp/: grade.json
radical_parser/dev/: parse_cjkvi.py
radical_parser/tests/: test_jp.py  test_zh.py
